--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav style="">
             <div class="container px-2">
                   <img src="/robitechlogo.png" alt="Robitech Logo" height="36"> 
-                 <a class="navbar-brand" href="#page-top" style="font-size: 1.5rem;"><b>ROBITECH SOLUTIONS</b></a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
+                 <a class="navbar-brand" href="#page-top" style="font-size: 1.7rem;" style="color:#0B0B45;"><b>ROBITECH SOLUTIONS</b></a>
+                        <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"  style="background-color:#0B0B45;"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about"><b>HOME</b></a></li>
@@ -40,7 +40,7 @@
         <div class="fluid-container justify-items-center py-4" >
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
-            <a class="btn btn-lg col-lg-8 justify-content-center bg-light text-black" href="#about"><b>See Home Page</b></a>
+            <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#about"  style="color:#0B0B45;"><b>See Home Page</b></a>
             <b style="font-size: 0.5rem;">Need help? Chat me.</b>
             <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
             <br>
@@ -49,9 +49,9 @@
             <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style=" color: black; font-size: 1.6rem;"></i></a>
             <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: black; font-size: 1.6rem;"></i></a>
          </div>  
-        <section class="fluid-container justify-items-center  py-4" id="about" style="color:#3F00FF;">
+        <section class="fluid-container justify-items-center  py-4" id="about">
          <div class="container">
-          <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
+          <h2 style="color:#0B0B45;"><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
           <p>
             Welcome to RobiTech Solutions. With the growing demand for marketing your brand, RobiTech Solutions comes at your disposition. Grow your brand by having a <b>branding or business website</b> built for you at a cost that won't break the bank. Through RobiTech Solutions you will also get <b>website maintenance services</b> that work with your budget. Grow your brand or business to the level it deserves. 
           </p>
@@ -60,8 +60,8 @@
         <section class="fluid-container justify-items-center py-4" id="services" >
            <div class="container">
             <h2 style="color:#0B0B45;"><b>SERVICES</b></h2>
-            <h1 style="color:#0B0B45;"><b>Websites</b></h1>
-         <p  style="color:#0B0B45;">
+            <h1><b>Websites</b></h1>
+         <p>
             A great brand or business deserves a modern web page that will reach a greater audience out there. RobiTech Solutions will develop a beautiful and search engine optimised business website that will draw more traffic to your social media pages and YouTube channel.
           Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
              Check out the pricing.
@@ -98,15 +98,15 @@
             </div>
            </div>
            <p class="py-3"  style="color:#0B0B45;"> 
-             <h1 style="color:#0B0B45;"><b>Website Maintenance</b></h1>                 
+             <h1><b>Website Maintenance</b></h1>                 
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
               <a class="btn btn-lg col-lg-8 justify-content-center bg-light text-black" href="#contact"><b>Get A Quote</b></a>   
            </p>
          </div>
         </section>
-        <section class="fluid-container justify-items-center py-4" id="contact"  style="color:#3F00FF;">  
+        <section class="fluid-container justify-items-center py-4" id="contact">  
          <div class="container">
-<h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
+<h2 style="color:#0B0B45;"><b>CONTACT ROBITECH SOLUTIONS</b></h2>
          <ul style="list-type: none;">                       
           <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
@@ -114,7 +114,7 @@
        </section>
                                                                                   
 <section class="container py-4" style="color: #1F51FF;">
- <h2 style="align-self: center;"><b>MY CLIENTS</b></h2>
+ <h2 style="align-self: center; color:#0B0B45;"><b>MY CLIENTS</b></h2>
 <div class="container">                                
  <a href="http://jmedianetworktv.github.io">
   <img height="150" width="150"  src="/jmedia.jpg" alt="JMedia Network TV logo">
