--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
         </nav>
         <!-- Header-->
         <div class="fluid-container justify-items-center py-2" >
-            <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
-            <br>
+            <section class="text-center justify-items-center" ">
+ <div class="container" style="color:#0B0B45; background-color: white; font-size: x-large;">
+   <b>
+       I make your business, brand or portfolio known globally. I bring more clients to your doorstep. Get that stunning website.
+   </b>
+ </div>
+ <br>
             <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#about"  style="background-color:#0B0B45;"><b>See Home Page</b></a>
             <b style="font-size: 0.5rem;">Need help? Chat me.</b>
             <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
@@ -67,14 +72,32 @@
              Check out the pricing.
         </p>
   <div class="card px-3">
-    <div class="card-header text-white" style="background-color:#0B0B45;">
-        <b>Branding/Portfolio Websites</b>
+      <div class="card-header text-white" style="background-color:#0B0B45;">
+        <b>Portfolio Websites</b>
         </div>
         <div class="card-body text-white" style="background-color:#0B0B45;">
           <ul>
               <li>Social media integration</li>
-              <li>Includes domain</li>
               <li>Content development</li>
+              <li>Hosting & domain for the first one year</li>
+              <li>Publishing on Google Search Console</li>
+          </ul>
+        </div>
+        <div class="card-footer text-muted">
+          <b>KES 9999</b>
+        </div> 
+    <div class="card-header text-white" style="background-color:#0B0B45;">
+        <b>Branding Websites</b>
+        </div>
+        <div class="card-body text-white" style="background-color:#0B0B45;">
+          <ul>
+              <li>Social media integration</li>
+              <li>Hosting & domain for the first one year</li>
+              <li>Content development</li>
+              <li>Social media integration</li>
+              <li>Full Search Engine Optimization</li>
+              <li>Google Analytics integration</li>
+              <li>Publishing on Google Search Console</li>
           </ul>
         </div>
         <div class="card-footer text-muted">
@@ -86,11 +109,13 @@
             <div class="card-body text-white" style="background-color:#0B0B45;">
               <ul>
                   <li>Social media integration</li>
-                  <li>Includes domain</li>
+                  <li>Domain & hosting for the first year</li>
                   <li>Content development</li>
                   <li>GoogleMyBusiness integration</li>
                   <li>MPESA/PayPal integration</li>
                   <li>Google Analytics integration</li>
+                  <li>Publishing on Google Search Console</li>
+                  <li>Full Search Engine Optimization</li>
               </ul>
             </div>
             <div class="card-footer text-muted">
