--- a/index.html
+++ b/index.html
@@ -135,42 +135,42 @@
           <li><i class="fa fa-phone" style="font-size: x-large;"><b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
-            <div class="flex items-center min-h-screen bg-gray-50 dark:bg-gray-900">
+            <div class="flex items-center min-h-screen container" style="background-color:#0B0B45;">
     <div class="container mx-auto">
       <div class="max-w-md mx-auto my-10 bg-white p-5 rounded-md shadow-sm">
         <div class="text-center">
-          <h1 class="my-3 text-3xl font-semibold text-gray-700 dark:text-gray-200">
+          <h1 class="my-3 text-3xl font-semibold text-white-700 dark:text-gray-200">
             <b>Keep in touch</b>
           </h1>
-          <p class="text-gray-400 dark:text-gray-400">
+          <p class="text-white-400 dark:text-gray-400">
             <b>Please fill in the form. I promise I won't spam your inbox</b>
           </p>
         </div>
         <div class="m-7">
           <form action="https://api.web3forms.com/submit" method="POST" id="form">
-            <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
-            <input type="hidden" name="subject" value="New Submission from Web3Forms" />
+            <input type="hidden" name="access_key" value="8a096fc9-1dd0-47b3-be4f-f070aa2ac841"/>
+            <input type="hidden" name="subject" value="New Submission from Web3Forms"/>
             <input type="checkbox" name="botcheck" id="" style="display: none;" />
   
             <div class="mb-6">
-              <label for="name" class="block mb-2 text-sm text-gray-600 dark:text-gray-400">Your Name</label>
-              <input type="text" name="name" id="name" placeholder="John Doe" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
+              <label for="name" class="block mb-2 text-sm text-white-600 dark:text-gray-400">Your Name</label>
+              <input type="text" name="name" id="name" placeholder="FirstName LastName" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
             </div>
             <div class="mb-6">
-              <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-400">Email Address</label>
-              <input type="email" name="email" id="email" placeholder="you@company.com" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
+              <label for="email" class="block mb-2 text-sm text-white-600 dark:text-gray-400">Email Address</label>
+              <input type="email" name="email" id="email" placeholder="domain@mail.com" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
             </div>
             <div class="mb-6">
-              <label for="phone" class="text-sm text-gray-600 dark:text-gray-400">Phone Number</label>
+              <label for="phone" class="text-sm text-white-600 dark:text-gray-400">Phone Number</label>
               <input type="text" name="phone" id="phone" placeholder="+1 (555) 1234-567" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
             </div>
             <div class="mb-6">
-              <label for="message" class="block mb-2 text-sm text-gray-600 dark:text-gray-400">Your Message</label>
+              <label for="message" class="block mb-2 text-sm text-white-600 dark:text-gray-400">Your Message</label>
   
               <textarea rows="5" name="message" id="message" placeholder="Your Message" class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" required></textarea>
             </div>
             <div class="mb-6">
-              <button type="submit" class="w-full px-3 py-4 text-white bg-indigo-500 rounded-md focus:bg-indigo-600 focus:outline-none">
+              <button type="submit" class="w-full px-3 py-4 text-black bg-white rounded-md focus:bg-indigo-600 focus:outline-none">
                 Send Message
               </button>
             </div>
