--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
             <a href="https://wa.me/254718301634"  style="font-size: 1.6rem; color:#1F51FF;"><i class="fa fa-whatsapp"></i></a>                                                                                    
             <br>
             <b style="color:#1F51FF;">Follow Me</b>                                                                                                                                                                                                 
-            <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: black; font-size: 1.6rem;"></i></a>
-            <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style=" color: black; font-size: 1.6rem;"></i></a>
-            <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: black; font-size: 1.6rem;"></i></a>
+            <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style=" color: black; font-size: 2rem;"></i></a>
+            <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="color: black; font-size: 2rem;"></i></a>
          </div>  
         <section class="fluid-container justify-items-center  py-2" id="about">
          <div class="container">
@@ -138,11 +137,11 @@
             <div class="flex items-center min-h-screen container py-2" >
     <div class="container mx-auto">
       <div class="max-w-md mx-auto my-10 p-5 rounded-md shadow-sm" style="background-color:#0B0B45;" >
-        <div class="text-center">
-          <h1 class="my-3 text-3xl font-semibold text-white">
+        <div class="text-center py-2">
+          <h1 class="my-3 text-3xl text-white">
             <b>Keep in touch</b>
           </h1>
-          <p class="text-white-400">
+          <p class="text-white">
             <b>Please fill in the form for useful updates and insights. I promise I won't spam your inbox</b>
           </p>
         </div>
@@ -153,19 +152,19 @@
             <input type="checkbox" name="botcheck" id="" style="display: none;" />
   
             <div class="mb-6">
-              <label for="name" class="block mb-2 text-sm text-white-600">Your Name</label>
+              <label for="name" class="block mb-2 text-sm text-white">Your Name</label>
               <input type="text" name="name" id="name" placeholder="FirstName LastName" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
             </div>
             <div class="mb-6">
-              <label for="email" class="block mb-2 text-sm text-white-600">Email Address</label>
+              <label for="email" class="block mb-2 text-sm text-white">Email Address</label>
               <input type="email" name="email" id="email" placeholder="domain@mail.com" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
             </div>
             <div class="mb-6">
-              <label for="phone" class="text-sm text-white-600">Phone Number</label>
+              <label for="phone" class="text-sm text-white">Phone Number</label>
               <input type="text" name="phone" id="phone" placeholder="+1 (555) 1234-567" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
             </div>
             <div class="mb-6">
-              <label for="message" class="block mb-2 text-sm text-white-600">Your Message</label>
+              <label for="message" class="block mb-2 text-sm text-white">Your Message</label>
   
               <textarea rows="5" name="message" id="message" placeholder="Your Message" class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" required></textarea>
             </div>
