--- a/index.html
+++ b/index.html
@@ -5,26 +5,24 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="CALL 0718301634" />
-        <meta name="author" content="RobiTech Solutions"/>
-        <title>RobiTech Solutions. Marketing WEBSITES.</title>
+        <meta name="author" content="Robiweb Marketing"/>
+        <title>Robiweb Marketing. Web design & internet marketing</title>
         <meta property="og:type" content="Business Website"/>
-        <meta property="og:title" content="RobiTech Solutions" />
+        <meta property="og:title" content="Robiweb Marketing" />
         <meta property="og:description" content="WEBSITES,CALL 0718301634" />
-        <meta property="og:image" content="/robitechlogo.jpg" />
-        <link rel="cannonical"  href="https://robitechsolutions.github.io" />
+        <link rel="cannonical"  href="https://robiwebmarketing.com" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet"> 
     </head>
     <body id="page-top" style="background-color:grey;>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav style="">
             <div class="container px-1">
-                  <img src="/robitechlogo.png" alt="Robitech Logo" height="36"> 
+                  <h6 style="font-size: 2rem;"><span style="font-weight: 800; color: black;">r</span><span><i class="fa fa-globe" style="font-weight: 800; color: #0B0B45;"></i></span><span style="font-weight: 800; font-size: 2rem; color: black;">bi</span><span style="font-weight: 800; color: #0B0B45;">web</span></h6> 
                  <a class="navbar-brand" href="#page-top" style="font-size: 1.7rem;" style="color:#0B0B45;"><b>ROBITECH SOLUTIONS</b></a>
                         <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"  style="background-color:#0B0B45;"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -55,18 +53,18 @@
          </div>  
         <section class="fluid-container justify-items-center  py-2" id="about">
          <div class="container">
-          <h2 style="color:#0B0B45;"><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
+          <h2 style="color:#0B0B45;"><b>ABOUT ROBIWEB MARKETING</b></h2>   
           <p>
-            Welcome to RobiTech Solutions. With the growing demand for marketing your brand, RobiTech Solutions comes at your disposition. Grow your brand by having a <b>branding or business website</b> built for you at a cost that won't break the bank. Through RobiTech Solutions you will also get <b>website maintenance services</b> that work with your budget. Grow your brand or business to the level it deserves. 
+            Are you wondering why you get few or no clients for your business? Get more emails, calls or social media messages from potential clients. Robiweb marketing is an expert in designing fast websites as well as internet marketing campaigns. The idea is to make your portfolio, brand or business well known by your potential clients.
           </p>
          </div>
        </section> 
         <section class="fluid-container justify-items-center py-2" id="services" >
            <div class="container">
             <h2 style="color:#0B0B45;"><b>SERVICES</b></h2>
-            <h1><b>Websites</b></h1>
+            <h1><b>Web Design</b></h1>
          <p>
-            A great brand or business deserves a modern web page that will reach a greater audience out there. RobiTech Solutions will develop a beautiful and search engine optimised business website that will draw more traffic to your social media pages and YouTube channel.
+            A great brand or business deserves a modern web page that will reach a greater audience out there. Robiweb Marketing will develop a beautiful and search engine optimised business website that will draw more traffic to your social media pages and YouTube channel.
           Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
              Check out the pricing.
         </p>
@@ -125,14 +123,14 @@
            </div>
            <p class="py-2"  style="color:#0B0B45;"> 
              <h1><b>Website Maintenance</b></h1>                 
-             In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
+             In case you are not conversant with website maintenance practices such as hosting or web content update, Robiweb Marketing can handle that at your budget.
               <a class="btn btn-lg col-lg-8 justify-content-center text-white" href="#contact" style="background-color:#0B0B45;"><b>Get A Quote</b></a>   
            </p>
          </div>
         </section>
         <section class="fluid-container justify-items-center py-2" id="contact">  
          <div class="container">
-<h2 style="color:#0B0B45;"><b>CONTACT ROBITECH SOLUTIONS</b></h2>
+<h2 style="color:#0B0B45;"><b>CONTACT ROBIWEB MARKETING</b></h2>
          <ul style="list-type: none;">                       
           <li><i class="fa fa-phone" style="font-size: x-large;"><b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
@@ -185,7 +183,7 @@
        </section>                                                     
       <!-- Footer-->
             <div class="fluid-container py-2" style="color:#0B0B45;">
-                <b><p class="container text-center">Copyright &copy; RobiTech Solutions 2023</p></b>
+                <b><p class="container text-center">Copyright &copy; Robiweb Marketing 2023</p></b>
             </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
