--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     </head>
-    <body id="page-top" style="background-color:grey;>
+    <body id="page-top" style="background-color:grey; font-family: monospace;">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav style="">
             <div class="container px-1">
