--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav style="">
             <div class="container px-1">
-                  <h6 style="font-size: 2rem;"><span style="font-weight: 800; color: black;">r</span><span><i class="fa fa-globe" style="font-weight: 800; color: #0B0B45;"></i></span><span style="font-weight: 800; font-size: 2rem; color: black;">bi</span><span style="font-weight: 800; color: #0B0B45;">web</span></h6> 
-                 <a class="navbar-brand" href="#page-top" style="font-size: 1.7rem; color: #0B0B45;"><b>ROBIWEB MARKETING</b></a>
+                  <h6 style="font-size: 1rem;"><span style="font-weight: 800; color: black;">r</span><span><i class="fa fa-globe" style="font-weight: 800; color: #0B0B45;"></i></span><span style="font-weight: 800; font-size: 1rem; color: black;">bi</span><span style="font-weight: 800; color: #0B0B45;">web</span></h6> 
+                 <a class="navbar-brand" href="#page-top" style="font-size: 1rem; color: #0B0B45;"><b>ROBIWEB MARKETING</b></a>
                         <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"  style="background-color:#0B0B45;"><b>MENU</b><span class="navbar-toggler-icon" style="color:black;"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about"><b>HOME</b></a></li>
                         <li class="nav-item"><a class="nav-link" href="#services"><b>Services</b></a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact"><b>Contact</b></a></li>
-                        <li class="nav-item"><a class="nav-link" href="#media_pages"><b>Follow Me</b></a></li>
                     </ul>
                 </div>
             </div>
@@ -129,7 +128,7 @@
          <div class="container">
 <h2 style="color:#0B0B45;"><b>CONTACT ROBIWEB MARKETING</b></h2>
          <ul style="list-type: none;">                       
-          <li><i class="fa fa-phone" style="font-size: x-large;"><b>+254718301634</b></i></li>
+          <li><i class="fa fa-mobile" style="font-size: x-large;"><b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
             <div class="flex items-center min-h-screen container pxy-3" >
